[package]
name = "ndarray-demo"
version = "0.1.0"
authors = ["ringsaturn <ringsaturn.me@gmail.com>"]
edition = "2018"

[dependencies]
ndarray = "0.13"
# macOS use `intel-mkl`
# Check doc here:
# https://github.com/rust-ndarray/ndarray-linalg#blaslapack-backend
ndarray-linalg = { version = "0.12", features = ["intel-mkl"] }
